--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '^1.20'
+      - name: List files for debugging
+        run: ls -R
+      - name: Copy config file
+        run: mkdir -p ~/.config/jBalCompTools && cp testData/testConfig/config.toml ~/.config/jBalCompTools/config.toml
 
       - name: Run tests
         run: go test ./...
